fix: window / record align

--- a/src/components/HeaderEditor/HeaderEditor.module.scss
+++ b/src/components/HeaderEditor/HeaderEditor.module.scss
@@ -15,21 +15,6 @@
         height: 4.5rem;
     }
 
-    // display: flex;
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 80px;
-    // background: cyan;
-
-    .box {
-        width: 50px;
-        height: 200px;
-        &--1 {background-color: indianred;}
-        &--2 {background-color: lightblue;}
-    }
-
     .record-date {
         display: flex;
         justify-content: center;
@@ -38,7 +23,6 @@
         border: 1px solid $gray-2;
         border-radius: $radius-low;
         position: relative;
-        margin: 0 auto;
         width: 220px;
         @include media('lg') {
             width: 180px;
@@ -87,6 +71,7 @@
         .records {
             position: absolute;
             top: 93%;
+            left: -1px;
             border: 1px solid $bc-02;
             border-radius: 0 0 $radius-low $radius-low;
             border-top: 1px solid transparent;
@@ -98,22 +83,22 @@
             ul {
                 z-index: 999;
                 position: relative;
-                padding-top: 0.5rem;
+                padding-top: 1rem;
+                padding-bottom: 1rem;
                 margin: 0;
-                max-height: 278px;
-                overflow-y: scroll;
+                // max-height: 278px;
                 background-color: white;
 
-                &::before {
-                    width: 98%;
-                    height: 1px;
-                    background-color: $gray-1;
-                    content: '';
-                    position: absolute;
-                    top: 0;
-                    left: 50%;
-                    transform: translateX(-50%);
-                }
+                // &::before {
+                //     width: 98%;
+                //     height: 1px;
+                //     background-color: $gray-1;
+                //     content: '';
+                //     position: absolute;
+                //     top: 0;
+                //     left: 50%;
+                //     transform: translateX(-50%);
+                // }
 
                 .date {
                     padding: 0.5rem;
